# Swallet

./: .gitignore  README.md  io.github.nicolocarcagni.Swallet.json  meson.build
build-aux/: python3-requirements.json  requirements.txt
data/: io.github.nicolocarcagni.Swallet.desktop.in  io.github.nicolocarcagni.Swallet.gschema.xml  io.github.nicolocarcagni.Swallet.metainfo.xml.in  io.github.nicolocarcagni.Swallet.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: api.py  crypto.py  main.py  meson.build  preferences.py  preferences.ui  swallet.gresource.xml  swallet.in  ui_helpers.py  window.py  window.ui
